# cpp-template

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md  format.sh
.github/workflows/: build.yml
app/: CMakeLists.txt
app/src/: Main.cpp
cli/: CMakeLists.txt
cli/include/: Main.hpp
cli/src/: Main.cpp
cmake/: flags.cmake  options.cmake  warnings.cmake
conan/: conanfile.txt
lib/: CMakeLists.txt
lib/include/lib/: FrameManager.hpp  Macros.hpp  ScopedProfiler.hpp  Time.hpp
lib/src/: FrameManager.cpp  ScopedProfiler.cpp
tests/: CMakeLists.txt
tests/src/: tests.cpp
